--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -174,7 +174,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.187500
+ContentBrowserTab1.ThumbnailSizeScale=0.000000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 SequenceBrowser.ActiveTypeFilters=
@@ -205,7 +205,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/PersistentLevel
+LastLevel=/Game/Levels/Bubbleopolis
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -217,28 +217,29 @@ ToolbarOpenBPClass.CurrentViewType=0
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/Levels/Bubbleopolis.Bubbleopolis:PersistentLevel.Bubbleopolis
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/PersistentLevel
-MRUItem1=/Game/Movies/CutsceneLvl2
-MRUItem2=/Game/Movies/CutsceneLvl1
+MRUItem0=/Game/Bench_Bubble/lambert1
+MRUItem1=/Game/Player/ThirdPersonCharacter
+MRUItem2=/Game/Levels/Bubbleopolis
 MRUItem3=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem4=/Game/Gnome_Animated/FallGnome/Fall_Gnome
-MRUItem5=/Game/Player/ThirdPersonCharacter
-MRUItem6=/Game/Blueprints/Pickups/RedPickup_Actor
-MRUItem7=/Game/Levels/Castle
-MRUItem8=/Game/Levels/Bubbleopolis
-MRUItem9=/Game/Levels/NewSewer
-MRUItem10=/Game/Levels/MainMenu
-MRUItem11=/Game/Levels/Forest
-MRUItem12=/Game/BubbleGang/Boys/ManBPs/BubbleMan_BP
-MRUItem13=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Ani
-MRUItem14=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Blend
-MRUItem15=/Game/BubbleGang/Boys/BoyBPs/BubbleBoy_BP
-MRUItem16=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_BP
-MRUItem17=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_BP
-MRUItem18=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem19=/Game/Levels/Sewer_Ground_WATER__1__Blueprint
+MRUItem4=/Game/Levels/PersistentLevel
+MRUItem5=/Game/Movies/CutsceneLvl2
+MRUItem6=/Game/Movies/CutsceneLvl1
+MRUItem7=/Game/Gnome_Animated/FallGnome/Fall_Gnome
+MRUItem8=/Game/Blueprints/Pickups/RedPickup_Actor
+MRUItem9=/Game/Levels/Castle
+MRUItem10=/Game/Levels/NewSewer
+MRUItem11=/Game/Levels/MainMenu
+MRUItem12=/Game/Levels/Forest
+MRUItem13=/Game/BubbleGang/Boys/ManBPs/BubbleMan_BP
+MRUItem14=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Ani
+MRUItem15=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Blend
+MRUItem16=/Game/BubbleGang/Boys/BoyBPs/BubbleBoy_BP
+MRUItem17=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_BP
+MRUItem18=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_BP
+MRUItem19=/Game/Gnome_Animated/ChefGnome/ChefGnome
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2897,14 +2898,14 @@ CutsceneLvl2_C.Input=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
 Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Character="\"Object.CanPatrol\" "
+Character=
 Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Pawn="\"Object.CanPatrol\" "
+Pawn=
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
@@ -3533,6 +3534,7 @@ None=======
 /Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Ani.BubbleGirl_Ani=1
 /Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Blend.BubbleGirl_Blend=1
 /Game/Blueprints/Pickups/RedPickup_Actor.RedPickup_Actor=1
+/Game/Bench_Bubble/lambert1.lambert1=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3598,7 +3600,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=1065.000 Y=452.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1555.000 Y=919.000
+WindowSize=X=1560.000 Y=924.000
 None=======
 InitiallyMaximized=True
 
@@ -3617,7 +3619,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../Serotopia2021/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -5188,12 +5190,12 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/PersistentLevel
-MRUItem1=/Game/Movies/CutsceneLvl2
-MRUItem2=/Game/Movies/CutsceneLvl1
-MRUItem3=/Game/Levels/Forest
-MRUItem4=/Game/Levels/Castle
-MRUItem5=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/Levels/PersistentLevel
+MRUItem3=/Game/Movies/CutsceneLvl2
+MRUItem4=/Game/Movies/CutsceneLvl1
+MRUItem5=/Game/Levels/Castle
 MRUItem6=/Game/Levels/NewSewer
 MRUItem7=/Game/Levels/MainMenu
 MRUItem8=/Game/Levels/ForestBackup
@@ -5521,9 +5523,9 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 SceneComponent=
 Drawbridge_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
-CapsuleComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
+CapsuleComponent=
 SkeletalMeshComponent=
-PlayerStart=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
+PlayerStart=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Fall_Gnome_C.Physics.ConstraintsGroup,
 InstancedFoliageActor=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 PinkPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 SkeletalMesh=
@@ -5631,6 +5633,7 @@ BubbleWoman_Ani_C=
 BubbleWoman_BP_C=BoxComponent.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/Castle/Castle_Level/Castle_Level_FULL_TEMP.Castle_Level_FULL_TEMP;
@@ -5650,7 +5653,6 @@ RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall.MM_Sewer_Wall
 RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Water/MM_Sewer_Water.MM_Sewer_Water;
 RecentlyPlaced=/Game/SewerWall_Base_Mat.SewerWall_Base_Mat;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
@@ -5736,6 +5738,7 @@ None=======
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
