--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,6 +105,7 @@ LastSize=(X=0,Y=0)
 MultipleInstancePositions=(X=320,Y=160)
 NewWindowWidth=1290
 NewWindowHeight=754
+LastExecutedPlayModeLocation=PlayLocation_CurrentCameraLocation
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bAllowArcballRotate=False
@@ -205,7 +206,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/NewSewer
+LastLevel=/Game/Levels/PersistentLevel
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -217,31 +218,34 @@ ToolbarOpenBPClass.CurrentViewType=0
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Sewer/SewerBoat.SewerBoat
-OpenAssetsAtExit=/Game/Levels/NewSewer.NewSewer:PersistentLevel.NewSewer
 OpenAssetsAtExit=/Game/Sewer/SewerTrack.SewerTrack
 OpenAssetsAtExit=/Game/Sewer/Lever.Lever
+OpenAssetsAtExit=/Game/Geometry/Meshes/Plants/ReactivePlant.ReactivePlant
+OpenAssetsAtExit=/Game/Blueprints/PLant.PLant
+OpenAssetsAtExit=/Game/Sewer/gatee.gatee
+OpenAssetsAtExit=/Game/Blueprints/Sunflower_GROWTH.Sunflower_GROWTH
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sewer/Lever
-MRUItem1=/Game/Sewer/SewerTrack
-MRUItem2=/Game/Sewer/SewerBoat
-MRUItem3=/Game/Sewer/gatee
-MRUItem4=/Game/Levels/NewSewer
-MRUItem5=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem6=/Game/Bench_Bubble/lambert1
-MRUItem7=/Game/Player/ThirdPersonCharacter
-MRUItem8=/Game/Levels/Bubbleopolis
-MRUItem9=/Game/Levels/PersistentLevel
-MRUItem10=/Game/Movies/CutsceneLvl2
-MRUItem11=/Game/Movies/CutsceneLvl1
-MRUItem12=/Game/Gnome_Animated/FallGnome/Fall_Gnome
-MRUItem13=/Game/Blueprints/Pickups/RedPickup_Actor
-MRUItem14=/Game/Levels/Castle
-MRUItem15=/Game/Levels/MainMenu
-MRUItem16=/Game/Levels/Forest
-MRUItem17=/Game/BubbleGang/Boys/ManBPs/BubbleMan_BP
-MRUItem18=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Ani
-MRUItem19=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Blend
+MRUItem0=/Game/Levels/PersistentLevel
+MRUItem1=/Game/Levels/NewMap
+MRUItem2=/Game/Blueprints/Sunflower_GROWTH
+MRUItem3=/Game/Geometry/Meshes/Plants/ReactivePlant
+MRUItem4=/Game/Blueprints/PLant
+MRUItem5=/Game/Sewer/gatee
+MRUItem6=/Game/Blueprints/Sunflower_GROWTH_LP
+MRUItem7=/Game/Sewer/Lever
+MRUItem8=/Game/Sewer/SewerTrack
+MRUItem9=/Game/Sewer/SewerBoat
+MRUItem10=/Game/Levels/NewSewer
+MRUItem11=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem12=/Game/Bench_Bubble/lambert1
+MRUItem13=/Game/Player/ThirdPersonCharacter
+MRUItem14=/Game/Levels/Bubbleopolis
+MRUItem15=/Game/Movies/CutsceneLvl2
+MRUItem16=/Game/Movies/CutsceneLvl1
+MRUItem17=/Game/Gnome_Animated/FallGnome/Fall_Gnome
+MRUItem18=/Game/Blueprints/Pickups/RedPickup_Actor
+MRUItem19=/Game/Levels/Castle
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2897,6 +2901,14 @@ CutsceneLvl2_C.Tick=True
 CutsceneLvl2_C.Replication=True
 CutsceneLvl2_C.Actor=True
 CutsceneLvl2_C.Input=True
+PLant_C.Tick=True
+PLant_C.Replication=True
+PLant_C.Rendering=True
+PLant_C.Collision=True
+PLant_C.Actor=True
+PLant_C.Input=True
+PLant_C.TransformCommon=True
+Gate_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -2948,11 +2960,11 @@ Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
-BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent=
-ActorComponent=
+BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor=
@@ -2965,8 +2977,8 @@ Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
@@ -5192,18 +5204,18 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/NewSewer
-MRUItem1=/Game/Levels/Bubbleopolis
-MRUItem2=/Game/Levels/Forest
-MRUItem3=/Game/Levels/PersistentLevel
-MRUItem4=/Game/Movies/CutsceneLvl2
-MRUItem5=/Game/Movies/CutsceneLvl1
-MRUItem6=/Game/Levels/Castle
-MRUItem7=/Game/Levels/MainMenu
-MRUItem8=/Game/Levels/ForestBackup
-MRUItem9=/Game/Levels/Sewer
-MRUItem10=/Game/Levels/testYellow
-MRUItem11=/Game/Levels/NewMap
+MRUItem0=/Game/Levels/PersistentLevel
+MRUItem1=/Game/Levels/NewMap
+MRUItem2=/Game/Levels/NewSewer
+MRUItem3=/Game/Levels/Bubbleopolis
+MRUItem4=/Game/Levels/Forest
+MRUItem5=/Game/Movies/CutsceneLvl2
+MRUItem6=/Game/Movies/CutsceneLvl1
+MRUItem7=/Game/Levels/Castle
+MRUItem8=/Game/Levels/MainMenu
+MRUItem9=/Game/Levels/ForestBackup
+MRUItem10=/Game/Levels/Sewer
+MRUItem11=/Game/Levels/testYellow
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -5612,7 +5624,7 @@ StaircaseBP_C=Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,
 DisappearBridge1_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 DisappearBridge_C=
 RedPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
-gatee_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
+gatee_C=
 NewSewer_C=
 TargetPoint=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 BluePaintPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
@@ -5633,8 +5645,11 @@ BubbleGirl_Ani_C=
 BubbleGirl_BP_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Fall_Gnome_C.Physics.ConstraintsGroup,
 BubbleWoman_Ani_C=
 BubbleWoman_BP_C=BoxComponent.Collision.Collision,
+PLant_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
+ReactivePlant_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/PLant.PLant;
 RecentlyPlaced=/Game/Sewer/Lever.Lever;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
@@ -5654,7 +5669,6 @@ RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst.MM_Sew
 RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor.MM_Sewer_Floor;
 RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall.MM_Sewer_Wall;
 RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Water/MM_Sewer_Water.MM_Sewer_Water;
-RecentlyPlaced=/Game/SewerWall_Base_Mat.SewerWall_Base_Mat;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
@@ -5710,6 +5724,7 @@ ExtrudeCoordsWarning=False
 Warning_NoPreviewMeshFound=False
 ChangeVariableType_Warning=True
 DeleteVariableInUse_Warning=False
+DeleteComponentInUse_Warning=False
 
 [FoliageEdit]
 Radius=712.901855
@@ -6054,4 +6069,7 @@ DisplayActorsCount=False
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
 Property=0.500000
 Value=1.000000
+
+[SelectionDetails]
+PreserveScaleRatio=True
 
