--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,7 +153,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Movies
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -217,35 +217,29 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Sewer/SewerBoat.SewerBoat
-OpenAssetsAtExit=/Game/Sewer/SewerTrack.SewerTrack
-OpenAssetsAtExit=/Game/Sewer/Lever.Lever
-OpenAssetsAtExit=/Game/Geometry/Meshes/Plants/ReactivePlant.ReactivePlant
-OpenAssetsAtExit=/Game/Blueprints/PLant.PLant
-OpenAssetsAtExit=/Game/Sewer/gatee.gatee
-OpenAssetsAtExit=/Game/Blueprints/Sunflower_GROWTH.Sunflower_GROWTH
+OpenAssetsAtExit=/Game/Movies/Cutscene2.Cutscene2
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/PersistentLevel
-MRUItem1=/Game/Levels/NewMap
-MRUItem2=/Game/Blueprints/Sunflower_GROWTH
-MRUItem3=/Game/Geometry/Meshes/Plants/ReactivePlant
-MRUItem4=/Game/Blueprints/PLant
-MRUItem5=/Game/Sewer/gatee
-MRUItem6=/Game/Blueprints/Sunflower_GROWTH_LP
-MRUItem7=/Game/Sewer/Lever
-MRUItem8=/Game/Sewer/SewerTrack
-MRUItem9=/Game/Sewer/SewerBoat
-MRUItem10=/Game/Levels/NewSewer
-MRUItem11=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem12=/Game/Bench_Bubble/lambert1
-MRUItem13=/Game/Player/ThirdPersonCharacter
-MRUItem14=/Game/Levels/Bubbleopolis
-MRUItem15=/Game/Movies/CutsceneLvl2
-MRUItem16=/Game/Movies/CutsceneLvl1
-MRUItem17=/Game/Gnome_Animated/FallGnome/Fall_Gnome
-MRUItem18=/Game/Blueprints/Pickups/RedPickup_Actor
-MRUItem19=/Game/Levels/Castle
+MRUItem0=/Game/Movies/Cutscene2
+MRUItem1=/Game/Movies/Cutscene1
+MRUItem2=/Game/Movies/scene1source
+MRUItem3=/Game/Movies/scene2source
+MRUItem4=/Game/Movies/NewFileMediaSource2
+MRUItem5=/Game/Movies/NewFileMediaSource
+MRUItem6=/Game/Levels/PersistentLevel
+MRUItem7=/Game/Blueprints/Sunflower_GROWTH
+MRUItem8=/Game/Sewer/gatee
+MRUItem9=/Game/Blueprints/PLant
+MRUItem10=/Game/Geometry/Meshes/Plants/ReactivePlant
+MRUItem11=/Game/Sewer/Lever
+MRUItem12=/Game/Sewer/SewerTrack
+MRUItem13=/Game/Sewer/SewerBoat
+MRUItem14=/Game/Levels/NewMap
+MRUItem15=/Game/Blueprints/Sunflower_GROWTH_LP
+MRUItem16=/Game/Levels/NewSewer
+MRUItem17=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem18=/Game/Bench_Bubble/lambert1
+MRUItem19=/Game/Player/ThirdPersonCharacter
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2909,10 +2903,36 @@ PLant_C.Actor=True
 PLant_C.Input=True
 PLant_C.TransformCommon=True
 Gate_C.TransformCommon=True
+Cutscene1_C.Default=True
+Cutscene1_C.Appearance=True
+Cutscene1_C.Designer=True
+Cutscene1_C.Input=True
+Cutscene1_C.Interaction=True
+Cutscene1_C.Performance=True
+Cutscene1_C.Layout=True
+Cutscene1_C.Behavior=True
+Cutscene1_C.Render Transform=True
+Cutscene1_C.Accessibility=True
+Cutscene1_C.Clipping=True
+Cutscene1_C.Navigation=True
+Cutscene1_C.Localization=True
+Cutscene2_C.Default=True
+Cutscene2_C.Appearance=True
+Cutscene2_C.Designer=True
+Cutscene2_C.Input=True
+Cutscene2_C.Interaction=True
+Cutscene2_C.Performance=True
+Cutscene2_C.Layout=True
+Cutscene2_C.Behavior=True
+Cutscene2_C.Render Transform=True
+Cutscene2_C.Accessibility=True
+Cutscene2_C.Clipping=True
+Cutscene2_C.Navigation=True
+Cutscene2_C.Localization=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object=
+Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
@@ -3071,6 +3091,8 @@ BubbleWoman_Ani_C=
 BubbleWoman_BP_C=
 SewerBoat_C=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Cutscene1_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Cutscene2_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -3549,6 +3571,13 @@ None=======
 /Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_Blend.BubbleGirl_Blend=1
 /Game/Blueprints/Pickups/RedPickup_Actor.RedPickup_Actor=1
 /Game/Bench_Bubble/lambert1.lambert1=1
+/Game/Blueprints/PLant.PLant=1
+/Game/Blueprints/Sunflower_GROWTH.Sunflower_GROWTH=1
+/Game/Movies/NewFileMediaSource.NewFileMediaSource=1
+/Game/Movies/scene2source.scene2source=1
+/Game/Movies/scene1source.scene1source=1
+/Game/Movies/Cutscene1.Cutscene1=1
+/Game/Movies/Cutscene2.Cutscene2=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -5205,10 +5234,10 @@ WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Levels/PersistentLevel
-MRUItem1=/Game/Levels/NewMap
-MRUItem2=/Game/Levels/NewSewer
-MRUItem3=/Game/Levels/Bubbleopolis
-MRUItem4=/Game/Levels/Forest
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/Levels/NewMap
+MRUItem3=/Game/Levels/NewSewer
+MRUItem4=/Game/Levels/Bubbleopolis
 MRUItem5=/Game/Movies/CutsceneLvl2
 MRUItem6=/Game/Movies/CutsceneLvl1
 MRUItem7=/Game/Levels/Castle
@@ -5704,6 +5733,7 @@ SpotLight.Light=True
 StaticMeshActor.Actor=False
 SkeletalMeshActor.Animation=True
 BubbleBoy_BP_C.Animation=True
+FileMediaSource.File=True
 
 [FEditorModeTools]
 CoordSystem=1
